add babyview and visual grounding

--- a/404.html
+++ b/404.html
@@ -227,6 +227,14 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="https://chengxuz.github.io/publication/babyview/">The BabyView camera: Designing a new head-mounted camera to capture children’s early social and visual environments</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://chengxuz.github.io/publication/visual_grounding/">Visual Grounding Helps Learn Word Meanings in Low-Data Regimes</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://chengxuz.github.io/publication/short_long_bms/">How Well Do Unsupervised Learning Algorithms Model Human Real-time and Life-long Learning?</a></li>
   </ul>
   
@@ -236,14 +244,6 @@
   
   <ul>
     <li><a href="https://chengxuz.github.io/publication/unsup_vvs/">Unsupervised neural network models of the ventral visual stream</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://chengxuz.github.io/publication/vie/">Unsupervised Learning from Video with Deep Neural Embeddings</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://chengxuz.github.io/publication/local_aggregation/">Local Aggregation for Unsupervised Learning of Visual Embeddings</a></li>
   </ul>
   
   
