--- a/404.html
+++ b/404.html
@@ -227,11 +227,15 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="https://chengxuz.github.io/publication/babyview/">The BabyView camera: Designing a new head-mounted camera to capture children’s early social and visual environments</a></li>
+    <li><a href="https://chengxuz.github.io/publication/lexi_contrastive/">Lexicon-Level Contrastive Visual-Grounding Improves Language Modeling</a></li>
   </ul>
   
   <ul>
     <li><a href="https://chengxuz.github.io/publication/visual_grounding/">Visual Grounding Helps Learn Word Meanings in Low-Data Regimes</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://chengxuz.github.io/publication/babyview/">The BabyView camera: Designing a new head-mounted camera to capture children’s early social and visual environments</a></li>
   </ul>
   
   <ul>
@@ -240,10 +244,6 @@
   
   <ul>
     <li><a href="https://chengxuz.github.io/publication/contrast_info/">Conditional Negative Sampling for Contrastive Learning of Visual Representations.</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://chengxuz.github.io/publication/unsup_vvs/">Unsupervised neural network models of the ventral visual stream</a></li>
   </ul>
   
   
