--- a/index.html
+++ b/index.html
@@ -441,6 +441,10 @@ I am interested in both understanding brains and developing more effective AI mo
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/2403.14551.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 
