--- a/publication/index.html
+++ b/publication/index.html
@@ -332,6 +332,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/2403.14551.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 
