--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -232,7 +232,7 @@
     <h2><a href="https://chengxuz.github.io/publication/lexi_contrastive/">Lexicon-Level Contrastive Visual-Grounding Improves Language Modeling</a></h2>
     <div class="article-style">
       
-      Today’s most accurate language models aretrained on orders of magnitude more language data than human language learners receive—but no supervision from other sensory modalitiesthat play a crucial role in human learning. Can we make LMs’ …
+      Today’s most accurate language models are trained on orders of magnitude more language data than human language learners receive— but with no supervision from other sensory modalities that play a crucial role in human learning. Can we make LMs’ …
       
     </div>
   </div>
