--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ I am interested in both understanding brains and developing more effective AI mo
     Chengxu Zhuang, Evelina Fedorenko, Jacob Andreas</span>
   (2024).
   <a href="https://chengxuz.github.io/publication/lexi_contrastive/" itemprop="name">Lexicon-Level Contrastive Visual-Grounding Improves Language Modeling</a>.
-  arXiv.
+  ACL 2024, Findings.
   
   <p>
 
@@ -448,6 +448,10 @@ I am interested in both understanding brains and developing more effective AI mo
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/EvLab-MIT/LexiContrastiveGrd" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
@@ -470,7 +474,7 @@ I am interested in both understanding brains and developing more effective AI mo
     Chengxu Zhuang, Evelina Fedorenko, Jacob Andreas</span>
   (2024).
   <a href="https://chengxuz.github.io/publication/visual_grounding/" itemprop="name">Visual Grounding Helps Learn Word Meanings in Low-Data Regimes</a>.
-  To Appear in NAACL.
+  NAACL 2024, <strong>Oral presentation, Best Paper Award</strong>.
   
   <p>
 
@@ -484,6 +488,10 @@ I am interested in both understanding brains and developing more effective AI mo
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/EvLab-MIT/LexiContrastiveGrd" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
