--- a/publication/index.html
+++ b/publication/index.html
@@ -325,7 +325,7 @@
   <span itemprop="author">
     Chengxu Zhuang, Evelina Fedorenko, Jacob Andreas</span>.
   <a href="https://chengxuz.github.io/publication/lexi_contrastive/" itemprop="name">Lexicon-Level Contrastive Visual-Grounding Improves Language Modeling</a>.
-  arXiv,
+  ACL 2024, Findings,
   2024.
   <p>
 
@@ -339,6 +339,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/EvLab-MIT/LexiContrastiveGrd" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
@@ -368,7 +372,7 @@
   <span itemprop="author">
     Chengxu Zhuang, Evelina Fedorenko, Jacob Andreas</span>.
   <a href="https://chengxuz.github.io/publication/visual_grounding/" itemprop="name">Visual Grounding Helps Learn Word Meanings in Low-Data Regimes</a>.
-  To Appear in NAACL,
+  NAACL 2024, <strong>Oral presentation, Best Paper Award</strong>,
   2024.
   <p>
 
@@ -382,6 +386,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/EvLab-MIT/LexiContrastiveGrd" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
