--- a/publication/visual_grounding/index.html
+++ b/publication/visual_grounding/index.html
@@ -307,7 +307,7 @@
       <div class="col-sm-10">
         <div class="row">
           <div class="col-xs-12 col-sm-3 pub-row-heading">Publication</div>
-          <div class="col-xs-12 col-sm-9">To Appear in NAACL</div>
+          <div class="col-xs-12 col-sm-9">NAACL 2024, <strong>Oral presentation, Best Paper Award</strong></div>
         </div>
       </div>
       <div class="col-sm-1"></div>
@@ -348,6 +348,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline" href="https://github.com/EvLab-MIT/LexiContrastiveGrd" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
