--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a research scientist at OpenAI. I was previously an ICoN Postdoctoral Fellow at MIT, working with <a href="https://mcgovern.mit.edu/profile/ev-fedorenko/" target="_blank">Ev Fedorenko</a> and <a href="https://www.mit.edu/~jda/" target="_blank">Jacob Andreas</a>.
-Previously, I obtained my Ph.D. degree from Stanford, advised by <a href="http://web.stanford.edu/~yamins/" target="_blank">Daniel Yamins</a>.
+<p>I am an AI Research Scientist at Meta. I worked at OpenAI on ChatGPT Advanced Voice Mode. I was previously an ICoN Postdoctoral Fellow at MIT, working with <a href="https://mcgovern.mit.edu/profile/ev-fedorenko/" target="_blank">Ev Fedorenko</a> and <a href="https://www.mit.edu/~jda/" target="_blank">Jacob Andreas</a>.
+I obtained my Ph.D. degree from Stanford, advised by <a href="http://web.stanford.edu/~yamins/" target="_blank">Daniel Yamins</a>.
 I am interested in both understanding brains and developing more effective AI models.</p>
 
 
